# AI-Investigation-Platform

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: milestone-06-deterministic-vs-llm.md  milestone-10-controlled-probabilistic-investigator.md  milestone-11-holdout-evaluation.md  milestone-12-uncertainty-decision-policy.md
docs/experiments/: milestone-06-gemini-benchmark.md  milestone-7-deterministic-baseline.md  milestone-8-local-observability.md  milestone-9-scenario-regression-analysis.md
src/ai_investigation/: __init__.py  cli.py  decision_policy.py  diagnose_uncertainty_prompt.py  diagnosis.py  diagnosis_catalogue.py  evaluate.py  evidence.py  experiments.py  gemini_model.py  groq_model.py  investigator.py  investigators.py  llm_investigator.py  models.py  uncertainty_investigator.py
tests/: conftest.py  test_candidate_semantics.py  test_cli.py  test_comparison.py  test_decision_policy.py  test_diagnosis.py  test_diagnosis_catalogue.py  test_evaluation.py  test_evidence.py  test_experiment_evaluation.py  test_experiment_tracking.py  test_gemini_model.py  test_groq_integration.py  test_groq_model.py  test_holdout_m11.py  test_investigator.py  test_llm_investigator.py  test_milestone10.py  test_tools.py  test_uncertainty_contract_hardening.py  test_uncertainty_investigator.py  test_uncertainty_path_parity.py  test_uncertainty_prompt_diagnostic.py
tests/fixtures/: deployments.json  evaluation_scenarios.json  evaluation_scenarios_holdout_m11.json  evaluation_scenarios_m10.json  logs.json  service_health.json
(+12 files in other folders)
